--- a/index.html
+++ b/index.html
@@ -87,6 +87,35 @@
             </ul>
         </section>
     </main>
+
+    <section>
+        <h2>Our Profile</h2>
+        <img src="./images/img(1).jpg" alt="App">
+            <h3>Banking App</h3>
+            <p>App</p>
+        </img>
+        <img src="./images/img(2).jpg" alt="Marketing by phone">
+            <h3>Cashless Payment</h3>
+            <p>Marketing</p>
+        </img>
+        <img src="./images/img(3).jpg" alt="App for mobile and PC">
+            <h3>Meditation App</h3>
+            <p>App</p>
+        </img>
+        <img src="./images/img(4).jpg" alt="Taxi">
+            <h3>Taxi Service</h3>
+            <p>Marketing</p>
+        </img>
+        <img src="./images/img(5).jpg" alt="Phone design">
+            <h3>Screen Illustrations</h3>
+            <p>Design</p>
+        </img>
+        <img src="./images/img.jpg" alt="IT School">
+            <h3>Online Courses</h3>
+            <p>Marketing</p>
+        </img>
+    </section>
+
     <footer>
         <a href="./index.html">WebStudio
         </a>
