Our_Profile_img

--- a/index.html
+++ b/index.html
@@ -90,27 +90,27 @@
 
     <section>
         <h2>Our Profile</h2>
-        <img src="./images/img(1).jpg" alt="App">
+        <img src="./images/img(1).jpg" alt="App" width="360">
             <h3>Banking App</h3>
             <p>App</p>
         </img>
-        <img src="./images/img(2).jpg" alt="Marketing by phone">
+        <img src="./images/img(2).jpg" alt="Marketing by phone"  width="360">
             <h3>Cashless Payment</h3>
             <p>Marketing</p>
         </img>
-        <img src="./images/img(3).jpg" alt="App for mobile and PC">
+        <img src="./images/img(3).jpg" alt="App for mobile and PC" width="360">
             <h3>Meditation App</h3>
             <p>App</p>
         </img>
-        <img src="./images/img(4).jpg" alt="Taxi">
+        <img src="./images/img(4).jpg" alt="Taxi"  width="360">
             <h3>Taxi Service</h3>
             <p>Marketing</p>
         </img>
-        <img src="./images/img(5).jpg" alt="Phone design">
+        <img src="./images/img(5).jpg" alt="Phone design"  width="360">
             <h3>Screen Illustrations</h3>
             <p>Design</p>
         </img>
-        <img src="./images/img.jpg" alt="IT School">
+        <img src="./images/img.jpg" alt="IT School"  width="360">
             <h3>Online Courses</h3>
             <p>Marketing</p>
         </img>
